# ucv-ate-si-laboratorio7

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
src/lab7/: __init__.py  __main__.py  pipeline_registry.py
src/lab7/pipelines/data_processing/: nodes.py  pipeline.py
tests/pipelines/data_processing/: test_nodes.py
